# wgls-rs-fft

./: .dockerignore  CI_SETUP.md  CLAUDE.md  COMPLETE_SOLUTION_SUMMARY.md  Cargo.toml  DOCKER_CI_SETUP.md  Dockerfile.ci  FINAL_STATUS_REPORT.md  LICENSE  MISTRAL_VIBE_SESSION_SUMMARY.md  PUBLISHING.md  RADIX8_SUBGROUP_IMPLEMENTATION.md  README.md  REQUIREMENTS.md  RIVALRY_GUIDE.md  RIVALRY_SESSION_CODEX.md  SINGLE_DMA_OPTIMIZATION.md  TODO.md  resume.txt  test_batch.rs
.github/: CI_NOTES.md
.github/workflows/: ci.yml
benches/: benchmark_batch.rs  fft_benchmark.rs
examples/: compare_cufft.rs  double_buffer_fft.rs  find_optimal_batch.rs  gpu_only_benchmark.rs  parallel_pipeline.rs  rivalry_leaderboard.rs  test_batch_processing.rs  test_parallel.rs  windowed_fft.rs
scripts/: DOCKER_IMPLEMENTATION_SUMMARY.md  DOCKER_SETUP.md  Dockerfile.cuda  FIX_DOCKER_ISSUES.md  README.md  README_NVIDIA_DOCKER.md  ULTIMATE_SCRIPT_GUIDE.md  build_and_run_docker.sh  ci_test.sh  ci_test_focused.sh  comprehensive_test_and_run.sh  run_ci_in_docker.sh  run_leaderboard_nvidia_docker.sh  run_leaderboard_nvidia_simple.sh  test_docker_setup.sh  ultimate_fft_leaderboard.sh
src/: benchmark.rs  benchmark_batch.rs  cufft_wrapper.rs  hipfft_wrapper.rs  lib.rs  rocfft_wrapper.rs  shaders.rs
src/rivals/: baseline.rs  claude.rs  codex.rs  devstral_2.rs  gemini.rs  mistral_vibe.rs  mod.rs  radix4.rs  radix4_proper.rs
tests/: ci_debug.rs  gpu_fft_test.rs  ifft_test.rs  test_utils.rs  throughput.rs  windowed_fft_test.rs
